--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,44 @@
-/node_modules
+# Node modules
+node_modules/
+
+# Build output
+dist/
+build/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# IDE/editor folders
+.vscode/
+.idea/
+*.swp
+
+# Coverage reports
+coverage/
+
+# Temporary files
+tmp/
+temp/
+
+# Cache
+.cache/
+.next/
+*.tmp
+
+# React specific
+*.env.local
